--- a/admin/index.html
+++ b/admin/index.html
@@ -2,7 +2,7 @@
 <!doctype html>
 <html>
   <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
     <title>CMS Admin</title>
   </head>
   <body>
