--- a/admin/index.html
+++ b/admin/index.html
@@ -1,11 +1,19 @@
-
 <!doctype html>
-<html>
+<html lang="sk">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>CMS Admin</title>
+    <!-- Vypne auto‐inicializáciu -->
+    <script>window.CMS_MANUAL_INIT = true;</script>
   </head>
-  <body> 
+  <body>
+    <!-- Čistý Netlify CMS loader -->
     <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
+    <script>
+      // Explicitne načítaj config zo správnej cesty:
+      CMS.init({
+        config: '/admin/config.yml'
+      });
+    </script>
   </body>
 </html>
