--- a/admin/index.html
+++ b/admin/index.html
@@ -2,14 +2,18 @@
 <html lang="sk">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>CMS Admin</title>
+  <!-- 1) Štýly Netlify CMS -->
+  <link
+    rel="stylesheet"
+    href="https://unpkg.com/netlify-cms@^2.15.0/dist/netlify-cms.css"
+  />
+  <!-- 2) Identity Widget pre autentifikáciu -->
+  <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 </head>
 <body>
-  <!-- 1) React a ReactDOM -->
-  <script src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
-  <script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
-  <!-- 2) Netlify CMS App bundle -->
-  <script src="https://unpkg.com/netlify-cms-app@^2.15.59/dist/netlify-cms-app.js"></script>
+  <!-- 3) Hlavný CMS bundle (obsahuje auto-init) -->
+  <script src="https://unpkg.com/netlify-cms-app@^2.15.0/dist/netlify-cms-app.js"></script>
 </body>
 </html>
