--- a/admin/index.html
+++ b/admin/index.html
@@ -4,14 +4,14 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>CMS Admin</title>
-
-  <!-- Netlify Identity Widget pre autentifikáciu -->
+  <!-- Identity widget -->
   <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
-
-  <!-- Čistý Netlify CMS bundle (obsahuje React, ReactDOM aj auto-init) -->
-  <script src="https://unpkg.com/netlify-cms@^2.15.0/dist/netlify-cms.js"></script>
+  <!-- Netlify CMS bundle (buď najnovšia verzia, alebo pevne 2.15.0) -->
+  <!-- Bez caret: -->
+  <!-- <script src="https://unpkg.com/netlify-cms@2.15.0/dist/netlify-cms.js"></script> -->
+  <!-- Alebo úplne bez verzie: -->
+  <script src="https://unpkg.com/netlify-cms/dist/netlify-cms.js"></script>
 </head>
 <body>
-  <!-- Netlify CMS sa samo inicializuje a načíta config zo /admin/config.yml -->
 </body>
 </html>
