--- a/admin/index.html
+++ b/admin/index.html
@@ -4,14 +4,14 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>CMS Admin</title>
-  <!-- Identity widget -->
+  <!-- Netlify Identity Widget -->
   <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
-  <!-- Netlify CMS bundle (buď najnovšia verzia, alebo pevne 2.15.0) -->
-  <!-- Bez caret: -->
-  <!-- <script src="https://unpkg.com/netlify-cms@2.15.0/dist/netlify-cms.js"></script> -->
-  <!-- Alebo úplne bez verzie: -->
-  <script src="https://unpkg.com/netlify-cms/dist/netlify-cms.js"></script>
 </head>
 <body>
+  <!-- Kontajner pre CMS -->
+  <div id="nc-root"></div>
+
+  <!-- Pevná verzia Netlify CMS bundle v2.0.0 -->
+  <script src="https://unpkg.com/netlify-cms@2.0.0/dist/netlify-cms.js"></script>
 </body>
 </html>
