--- a/admin/index.html
+++ b/admin/index.html
@@ -4,14 +4,11 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>CMS Admin</title>
-  <!-- Netlify Identity Widget -->
-  <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+  <link rel="stylesheet" href="https://unpkg.com/netlify-cms@^2.15.0/dist/netlify-cms.css" />
 </head>
 <body>
-  <!-- Kontajner pre CMS -->
   <div id="nc-root"></div>
-
-  <!-- Pevná verzia Netlify CMS bundle v2.0.0 -->
-  <script src="https://unpkg.com/netlify-cms@2.0.0/dist/netlify-cms.js"></script>
+  <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+  <script src="https://unpkg.com/netlify-cms@^2.15.0/dist/netlify-cms.js"></script>
 </body>
 </html>
