--- a/admin/index.html
+++ b/admin/index.html
@@ -4,11 +4,13 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>CMS Admin</title>
-  <link rel="stylesheet" href="https://unpkg.com/netlify-cms@^2.15.0/dist/netlify-cms.css" />
+  <!-- štýly pre Netlify CMS -->
+  <link rel="stylesheet" href="https://unpkg.com/netlify-cms@2.15.0/dist/netlify-cms.css" />
 </head>
 <body>
   <div id="nc-root"></div>
-  <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
-  <script src="https://unpkg.com/netlify-cms@^2.15.0/dist/netlify-cms.js"></script>
+
+  <!-- Netlify CMS (auto načíta /admin/config.yml) -->
+  <script src="https://unpkg.com/netlify-cms@2.15.0/dist/netlify-cms.js"></script>
 </body>
 </html>
