--- a/admin/index.html
+++ b/admin/index.html
@@ -5,12 +5,12 @@
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>CMS Admin</title>
   <!-- štýly pre Netlify CMS -->
-  <link rel="stylesheet" href="https://unpkg.com/netlify-cms@2.15.0/dist/netlify-cms.css" />
+  <link rel="stylesheet" href="https://unpkg.com/netlify-cms/dist/netlify-cms.css" />
 </head>
 <body>
   <div id="nc-root"></div>
 
   <!-- Netlify CMS (auto načíta /admin/config.yml) -->
-  <script src="https://unpkg.com/netlify-cms@2.15.0/dist/netlify-cms.js"></script>
+  <script src="https://unpkg.com/netlify-cms/dist/netlify-cms.js"></script>
 </body>
 </html>
