--- a/admin/index.html
+++ b/admin/index.html
@@ -4,11 +4,11 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>CMS Admin</title>
-  <link rel="stylesheet" href="https://unpkg.com/netlify-cms/dist/netlify-cms.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/netlify-cms/dist/netlify-cms.css" />
 </head>
 <body>
   <div id="nc-root"></div>
   <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
-  <script src="https://unpkg.com/netlify-cms/dist/netlify-cms.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/netlify-cms/dist/netlify-cms.js"></script>
 </body>
 </html>
