--- a/index.html
+++ b/index.html
@@ -11,17 +11,21 @@
 </head>
 <body>
   <header class="hero" id="hero">
-    <div class="overlay">
-      <h1 id="band-name">Fest Classic Rock Band</h1>
-      <p id="tagline">Rockové hity, ktoré nezabúdajú</p>
-      <nav>
-        <a href="#about">O nás</a>
-        <a href="#members">Členovia</a>
-        <a href="#concerts">Koncerty</a>
-        <a href="#contact">Kontakt</a>
-      </nav>
-    </div>
-  </header>
+  <div class="logo-container">
+    <!-- logo z CMS -->
+    <img id="logo-image" src="" alt="Logo kapely" />
+  </div>
+</header>
+
+<nav class="main-nav">
+  <div class="nav-inner">
+    <a href="#about">O nás</a>
+    <a href="#members">Členovia</a>
+    <a href="#concerts">Koncerty</a>
+    <a href="#contact">Kontakt</a>
+  </div>
+</nav>
+
 
   <section id="about" class="section">
     <h2>O nás</h2>
