--- a/index.html
+++ b/index.html
@@ -5,27 +5,24 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Fest Classic Rock Band</title>
   <link rel="stylesheet" href="styles.css" />
-  <!-- knižnice -->
   <script src="https://cdn.jsdelivr.net/npm/js-yaml@4.1.0/dist/js-yaml.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/marked@4.3.0/marked.min.js"></script>
 </head>
 <body>
   <header class="hero" id="hero">
-  <div class="logo-container">
-    <!-- logo z CMS -->
-    <img id="logo-image" src="" alt="Logo kapely" />
-  </div>
-</header>
+    <div class="logo-container">
+      <img id="logo-image" src="" alt="Logo kapely" />
+    </div>
+  </header>
 
-<nav class="main-nav">
-  <div class="nav-inner">
-    <a href="#about">O nás</a>
-    <a href="#members">Členovia</a>
-    <a href="#concerts">Koncerty</a>
-    <a href="#contact">Kontakt</a>
-  </div>
-</nav>
-
+  <nav class="main-nav">
+    <div class="nav-inner">
+      <a href="#about">O nás</a>
+      <a href="#members">Členovia</a>
+      <a href="#concerts">Koncerty</a>
+      <a href="#contact">Kontakt</a>
+    </div>
+  </nav>
 
   <section id="about" class="section">
     <h2>O nás</h2>
@@ -37,7 +34,7 @@
   <section id="members" class="section">
     <h2>Členovia</h2>
     <div class="members-grid">
-      <!-- dynamicky doplnené -->
+      <!-- dynamicky doplnené cez JS -->
     </div>
   </section>
 
@@ -64,9 +61,12 @@
         const text = await res.text();
         const data = jsyaml.load(text);
 
-        // Názov a tagline
-        document.getElementById('band-name').textContent = data.band_name || 'Fest Classic Rock Band';
-        document.getElementById('tagline').textContent = data.tagline || '';
+        // Logo
+        if (data.logo_image) {
+          const logoEl = document.getElementById('logo-image');
+          logoEl.src = data.logo_image;
+          logoEl.alt = data.band_name || 'Fest Classic Rock Band';
+        }
 
         // Cover / placeholder
         const hero = document.getElementById('hero');
@@ -79,7 +79,7 @@
         if (imageUrl) {
           hero.style.backgroundImage = `url('${imageUrl}')`;
           hero.style.backgroundSize = 'cover';
-          hero.style.backgroundPosition = 'center';
+          hero.style.backgroundPosition = 'center 35%';
         }
 
         // O nás (markdown)
