--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="description" content="Fest Classic Rock Band – rockové hity, ktoré nezabúdajú. Kapela hrajúca klasiku. Kontakt pre koncerty.">
+  <meta property="og:title" content="Fest Classic Rock Band">
+  <meta property="og:image" content="/images/uploads/cover.jpg">
+  <meta property="og:description" content="Skúsená rocková kapela.">
+
   <title>Fest Classic Rock Band</title>
 
   <!-- Rockový / gotický štýl: ak nebudeš mať vlastný font, použijeme fallback z Google -->
