--- a/index.html
+++ b/index.html
@@ -208,6 +208,101 @@
 
       setupLightbox();
     }
+    <script>
+  // ---------- CONCERTS ----------
+  async function fetchConcerts() {
+    const repo = 'AdamMacejka/FestClassicRockBand';
+    const branch = 'main';
+    const apiBase = `https://api.github.com/repos/${repo}/contents/content/concerts?ref=${branch}`;
+
+    try {
+      const listRes = await fetch(apiBase);
+      const container = document.getElementById('concerts');
+      if (!listRes.ok) {
+        console.warn('Nepodarilo sa získať koncerty', listRes.status);
+        return;
+      }
+      const files = await listRes.json();
+      const concerts = [];
+
+      for (const file of files) {
+        if (!file.name.endsWith('.md')) continue;
+        const mdRes = await fetch(file.download_url);
+        if (!mdRes.ok) continue;
+        const text = await mdRes.text();
+        const match = text.match(/^---\s*([\s\S]*?)\s*---/);
+        if (!match) continue;
+        const frontmatter = match[1];
+        const data = jsyaml.load(frontmatter);
+        concerts.push({
+          date: data.date,
+          location: data.location,
+          event_url: data.event_url,
+          map_url: data.map_url,
+        });
+      }
+
+      renderConcerts(concerts);
+    } catch (e) {
+      console.error('Chyba pri načítaní koncertov:', e);
+    }
+  }
+
+  function renderConcerts(concerts) {
+    const section = document.getElementById('concerts');
+    if (!section) return;
+
+    if (!concerts || concerts.length === 0) {
+      section.innerHTML = '<h2>Koncerty</h2><p>Informácie o koncertoch doplníme čoskoro.</p>';
+      return;
+    }
+
+    // zoradiť podľa dátumu (najbližší hore)
+    concerts.sort((a, b) => {
+      const da = new Date(a.date);
+      const db = new Date(b.date);
+      return da - db;
+    });
+
+    const list = document.createElement('div');
+    list.className = 'concert-list';
+
+    concerts.forEach(c => {
+      const card = document.createElement('div');
+      card.className = 'concert-card';
+
+      const dateObj = c.date ? new Date(c.date) : null;
+      const dateStr = dateObj
+        ? dateObj.toLocaleDateString('sk-SK', { day: '2-digit', month: 'short', year: 'numeric', hour: '2-digit', minute: '2-digit' })
+        : '';
+
+      let inner = `<div class="concert-info">
+          <div class="concert-date">${dateStr}</div>
+          <div class="concert-location">${c.location || ''}</div>
+          <div class="concert-links">`;
+
+      if (c.event_url) {
+        inner += `<a class="link-event" target="_blank" rel="noopener" href="${c.event_url}">Event</a>`;
+      }
+      if (c.map_url) {
+        inner += ` ${c.event_url ? '|' : ''} <a class="link-map" target="_blank" rel="noopener" href="${c.map_url}">Mapa</a>`;
+      }
+
+      inner += `</div></div>`;
+
+      card.innerHTML = inner;
+      list.appendChild(card);
+    });
+
+    section.innerHTML = '<h2>Koncerty</h2>';
+    section.appendChild(list);
+  }
+
+  // zavolaj pri init
+  document.addEventListener('DOMContentLoaded', () => {
+    fetchConcerts();
+  });
+</script>
 
     // ---------- LIGHTBOX ----------
     function setupLightbox() {
